fixed spacing
fixed spacing on 404 also made minor tweaks to main website

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -153,7 +153,7 @@ li {
 }
 
 .copyright {
-    text-align: right;
+    text-align: center;
     color: white;
     font-weight: 300;
 }
